Fix the spacing in nav bar

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -49,3 +49,12 @@
     transform: rotate(360deg);
   }
 }
+
+.navBar{
+  position: sticky;
+    top: 0;
+    background-color: cadetblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
