--- a/src/pages/NavBar/NavBar.module.css
+++ b/src/pages/NavBar/NavBar.module.css
@@ -1,5 +1,9 @@
 .navbar{
     display: flex;
     flex-direction: row;
-    
+width: 100vw;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+
 }
